test/pos/min00.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers
(qualif Zog ((v @a0)) (<= 10 v))
(qualif Zog ((v @a0)) (<= 9 v))
(qualif Zog ((v @a0)) (<= 8 v))
(qualif Zog ((v @a0)) (<= 99 v))

; Well-formedness Constraints
(wf $k0 ((lq_karg$v##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)) (=> (= _VV##1 100) ($k0 _VV##1))))
(constraint (forall ((_VV##2 Int)) (=> ($k0 _VV##2) (<= 15 _VV##2))))

